[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Alex Barbee"]
edition = "2021"
description = "An example hello world wasm project"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
